--- a/index.html
+++ b/index.html
@@ -6,6 +6,26 @@
     <title>Javascript Exercise 1</title>
 </head>
 <body>
+
+<script>
+    //read numbers in the program
+    const num1 = prompt('Enter First Number: ');
+    const num2 = prompt('Enter Second Number: ');
+    //read operator
+    const operator = prompt('Enter Method (+,-,/,*)');
+    let result = 0;
+        if(operator == '+') {
+            result = num1 + num2;
+        } else if(operator == '-') {
+            result = num1 - num2;
+        } else if(operator == '/') {
+            result = num1 / num2;
+        } else if (operator == '*') {
+            result = num1 * num2;
+        }
+    
+</script>
+
     
 </body>
 </html>
