--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
 
     <script>
+        alert("Type In Your Equation")
         //read numbers in the program
         const num1 = prompt('Enter First Number: ');
         const num2 = prompt('Enter Second Number: ');
